--- a/.github/ISSUE_TEMPLATE/03_doc_inconsistencies.yaml
+++ b/.github/ISSUE_TEMPLATE/03_doc_inconsistencies.yaml
@@ -1,5 +1,5 @@
 name: 📜 Documentation Inconsistency 📜
-description: Please report any inconsistencies found in any of the Google Docs OR if something in Emerald Imperium is different than the data found on ([the Radical Red dex](https://dex.radicalred.net/)) and it is NOT explicitly mentioned.
+description: Any inconsistencies found in the Google Docs OR if something in Emerald Imperium is different than the data found on ([the Radical Red dex](https://dex.radicalred.net/)) and it is NOT explicitly mentioned.
 body:
   - type: markdown
     attributes:
