--- a/.github/ISSUE_TEMPLATE/04_other_errors.yaml
+++ b/.github/ISSUE_TEMPLATE/04_other_errors.yaml
@@ -21,31 +21,17 @@ body:
     id: version
     attributes:
       label: Version
-      description: What version of pokeemerald-expansion are you using as a base?
+      description: What version of Emerald Imperium are you playing?
       options:
-        - 1.10.0 (Latest release)
-        - master (default, unreleased bugfixes)
-        - upcoming (Edge)
-        - 1.9.4
-        - 1.9.3
-        - 1.9.2
-        - 1.9.1
-        - 1.9.0
-        - pre-1.9.0
+        - 1.0
+        - beta
     validations:
       required: true
-  - type: input
-    id: upcomingversion
-    attributes:
-      label: Upcoming/master Version
-      description: If you're using the upcoming or master branches directly, please specify what was the commit hash you pulled from.
-    validations:
-      required: false
   - type: input
     id: contact
     attributes:
       label: Discord contact info
-      description: Provide your Discord tag here so we can contact you in case we need more details. Be sure to join our server ([here](https://discord.gg/6CzjAG6GZk)).
-      placeholder: ex. Lunos#4026
+      description: Provide your Discord tag here so we can contact you in case we need more details. Be sure to join the Discord server ([here](https://discord.gg/XJkctHqR)).
+      placeholder: ex. iriv24#8479
     validations:
       required: false
