--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Emerald Imperium's Discord server!
-    url: https://discord.gg/AgJReMpxr6
+    url: https://discord.gg/kKVpPndTwG
     about: You can follow the development of Emerald Imperium and hang out with other folks who enjoy the game there!
